# deployment-with-docker

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
app/: Dockerfile  utils.py
app/pages/: 2_🔮_Prédiction.py  3_🧬_Espace_Latent.py  4_🏭_Simulation_Production.py
app/visualization/: __init__.py  correlation_plots.py  sensor_plots.py
artifacts/: autoencoder.keras  encoder.keras  metrics.pkl  threshold.pkl
codes/: output.html
codes/App-Stramlit/: app.py  pyproject.toml
codes/App-Stramlit/models/autoencodeur/: scaler_opt.pkl
codes/App-Stramlit/models/autoencodeur_lstm/: autoencoder_lstm.keras
codes/App-Stramlit/src/visualization/: correlation_plots.py
codes/App-Train/: .dockerignore  Dockerfile  style.css  train.py
codes/App-Train/models/Lof/: lof.pkl
codes/App-Train/models/autoencodeur/: autoencoder_opt.keras
codes/App-Train/models/autoencodeur_lstm/: scaler.pkl
codes/App-Train/pages/: 2_🔮_Prédiction.py
codes/app/: Dockerfile  requirements.txt
codes/app/pages/: 1_📊_Visualisation_Capteurs.py
codes/app/src/: decision_system.py  predictor.py  preprocessing.py
codes/app/tests/: test_preprocessing.py
codes/models/Lof/: lof.pkl
codes/models/autoencodeur_lstm/: autoencoder_lstm.keras
codes/models/one_class_svm/: ocsvm.pkl
notebooks/: notebook.ipynb  notebook_test.ipynb
src/: Dockerfile  train.py
src/app/assets/: output.html
src/app/pages/: 3_🧬_Espace_Latent.py  4_🏭_Simulation_Production.py
src/app/src/: __init__.py  model_loader.py  utils.py
src/models/Lof/: scaler.pkl
src/models/autoencodeur/: autoencoder_opt.keras
(+8 files in other folders)
